create README and improve desktop UI

--- a/input.css
+++ b/input.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 
-* {
+:root {
+  --primary: linear-gradient(135deg, rgb(255, 64, 25), rgb(255, 15, 61));
+}
+body {
   font-family: "Roboto", sans-serif;
 }
 section {
@@ -8,22 +11,32 @@ section {
 }
 
 .bg-primary {
-  background: linear-gradient(45deg, rgb(255, 64, 25), rgb(255, 15, 61));
+  background: var(--primary);
 }
 
 @tailwind base;
 @tailwind components;
 
 @layer base {
+  body {
+    @apply flex items-center justify-center py-5 xl:py-8;
+  }
   form input {
     @apply my-2 py-0.5 px-1 border-2 border-gray-300 border-solid w-full rounded-md text-black sm:py-1 sm:px-2 md:px-3 md:py-1.5;
   }
   .btn-primary {
-    @apply relative bg-primary px-4 py-1.5 text-white rounded-md float-right my-2 transition sm:mt-4 md:px-6 md:py-2;
+    @apply hover:shadow-xl relative bg-primary px-4 py-1.5 text-white rounded-md float-right my-2 transition sm:mt-4 md:px-6 md:py-2;
   }
   section {
-    @apply rounded-lg relative m-auto w-3/4 p-5 bg-white text-left sm:px-10 sm:py-8 mt-[25%] sm:mt-0 lg:w-1/2 xl:px-12 xl:w-4/12;
+    @apply rounded-lg relative m-auto w-3/4 p-5 bg-white text-left sm:px-10 sm:py-8 mt-0 lg:w-1/2 xl:px-12 xl:w-5/12 2xl:w-4/12;
   }
 }
 
 @tailwind utilities;
+
+/* prevent form from expanding beyond screen height on laptops where the screen isn't tall enough.  */
+@media only screen and (min-width: 1024px) and (max-width: 1280px) {
+  section {
+    transform: scale(90%);
+  }
+}
