--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 
-* {
+:root {
+  --primary: linear-gradient(135deg, rgb(255, 64, 25), rgb(255, 15, 61));
+}
+
+body {
   font-family: "Roboto", sans-serif;
 }
 
@@ -9,7 +13,7 @@ section {
 }
 
 .bg-primary {
-  background: linear-gradient(45deg, rgb(255, 64, 25), rgb(255, 15, 61));
+  background: var(--primary);
 }
 
 /*
@@ -437,6 +441,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
+body{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+@media (min-width: 1280px){
+  body{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+}
+
 form input{
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -495,7 +514,13 @@ form input{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-  background: linear-gradient(45deg, rgb(255, 64, 25), rgb(255, 15, 61));
+  background: var(--primary);
+}
+
+.btn-primary:hover{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 @media (min-width: 640px){
@@ -519,7 +544,7 @@ form input{
 section{
   position: relative;
   margin: auto;
-  margin-top: 25%;
+  margin-top: 0px;
   width: 75%;
   border-radius: 0.5rem;
   --tw-bg-opacity: 1;
@@ -529,10 +554,6 @@ section{
 }
 
 @media (min-width: 640px){
-  section{
-    margin-top: 0px;
-  }
-
   section{
     padding-left: 2.5rem;
     padding-right: 2.5rem;
@@ -552,12 +573,18 @@ section{
 
 @media (min-width: 1280px){
   section{
-    width: 33.333333%;
+    width: 41.666667%;
   }
 
   section{
     padding-left: 3rem;
     padding-right: 3rem;
+  }
+}
+
+@media (min-width: 1536px){
+  section{
+    width: 33.333333%;
   }
 }
 
@@ -615,10 +642,6 @@ section{
   margin-bottom: -0.25rem;
 }
 
-.flex{
-  display: flex;
-}
-
 .h-max{
   height: -webkit-max-content;
   height: -moz-max-content;
@@ -627,14 +650,6 @@ section{
 
 .w-full{
   width: 100%;
-}
-
-.items-center{
-  align-items: center;
-}
-
-.justify-center{
-  justify-content: center;
 }
 
 .px-0{
@@ -656,12 +671,15 @@ section{
   font-weight: 700;
 }
 
-@media (min-width: 640px){
-  .sm\:py-5{
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-  }
+/* prevent form from expanding beyond screen height on laptops where the screen isn't tall enough.  */
 
+@media only screen and (min-width: 1024px) and (max-width: 1280px) {
+  section {
+    transform: scale(90%);
+  }
+}
+
+@media (min-width: 640px){
   .sm\:text-3xl{
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -681,12 +699,5 @@ section{
   .md\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
-  }
-}
-
-@media (min-width: 1280px){
-  .xl\:py-8{
-    padding-top: 2rem;
-    padding-bottom: 2rem;
   }
 }
